# cesso

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/cesso-core/: Cargo.toml  README.md
crates/cesso-core/src/: bitboard.rs  board.rs  castle_rights.rs  chess_move.rs  color.rs  error.rs  fen.rs  file.rs  lib.rs  make_move.rs  perft.rs  piece.rs  piece_kind.rs  rank.rs  square.rs  zobrist.rs
crates/cesso-core/src/attacks/: magic.rs  magic_data.rs  mod.rs  tables.rs
crates/cesso-core/src/movegen/: check.rs  king.rs  knights.rs  mod.rs  pawns.rs  pins.rs  sliders.rs
crates/cesso-engine/: Cargo.toml
crates/cesso-engine/src/: lib.rs  time.rs
crates/cesso-engine/src/book/: hash.rs  mod.rs
crates/cesso-engine/src/eval/: king_safety.rs  material.rs  mobility.rs  mod.rs  outposts.rs  pawns.rs  phase.rs  pst.rs  rooks.rs  score.rs
crates/cesso-engine/src/eval/nnue/: accumulator.rs  features.rs  mod.rs  network.rs
crates/cesso-engine/src/search/: control.rs  draw.rs  heuristics.rs  mod.rs  negamax.rs  ordering.rs  pool.rs  see.rs  tt.rs
crates/cesso-engine/tests/: lazy_smp.rs
crates/cesso-uci/: Cargo.toml
crates/cesso-uci/src/: command.rs  engine.rs  error.rs  lib.rs
data/: README.md
scripts/: bench_smp.sh  bump-version.sh
src/: main.rs
train/: .gitignore  Cargo.toml  README.md
train/src/: main.rs
